# APLN

./: README.md  app.py  dcgan.py  pyproject.toml  stylegan.py
stylegan/: map_epoch_185.pth
